# rust-ray-tracer

./: Cargo.toml
save/spheres/: spheres.config
src/: config.rs  linalg.rs  main.rs  shapes.rs  trace.rs
