[package]
name = "graphics"
version = "0.1.0"
authors = ["Thomas Del Vecchio <thomasdelvecchio4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = "0.8.3"
rayon = "1.5.0"
itertools = "0.10.0"
structopt = { version = "0.3", default-features = false }